# rich_rust

./: .gitignore  AGENTS.md  COVERAGE.md  Cargo.toml  FEATURE_PARITY.md  PLAN_TO_PORT_RICH_TO_RUST.md  PROPOSED_RUST_RICH_ARCHITECTURE.md  README.md  RICH_SPEC.md  TESTING.md  UPGRADE_LOG.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
benches/: render_bench.rs
examples/: e2e_export.rs  phase2_demo.rs
src/: box.rs  cells.rs  color.rs  console.rs  interactive.rs  lib.rs  live.rs  logging.rs  measure.rs  segment.rs  style.rs  sync.rs  terminal.rs  text.rs  theme.rs
src/markup/: mod.rs
src/renderables/: align.rs  columns.rs  control.rs  group.rs  json.rs  layout.rs  markdown.rs  mod.rs  padding.rs  panel.rs  pretty.rs  progress.rs  rule.rs  syntax.rs  table.rs  traceback.rs  tree.rs
tests/: conformance_python.rs  conformance_test.rs  demo_showcase_e2e.rs  demo_showcase_smoke.rs  e2e_combined.rs  e2e_export.rs  e2e_hyperlink.rs  e2e_input_limits.rs  e2e_interactive.rs  e2e_json_formatting.rs  e2e_live.rs  e2e_markdown.rs  e2e_markdown_rendering.rs  e2e_mutex_poison.rs  e2e_panel.rs  e2e_performance.rs  e2e_rendering.rs  e2e_syntax.rs  e2e_table.rs  e2e_wide_terminal.rs  e2e_width_algorithms.rs  fuzz_markup_parser.rs  fuzz_style_parser.proptest-regressions  fuzz_style_parser.rs  golden_test.rs  logging_test.rs  mutex_poison_recovery.rs  property_tests.proptest-regressions  property_tests.rs  regression_tests.rs  repro_wide_char_overflow.rs  terminal_detection_errors.rs  thread_safety.rs
tests/common/: assertions.rs  flaky.rs  mod.rs  platform.rs  validation.rs
tests/conformance/: README.md  mod.rs  progress_tests.rs  text_tests.rs
tests/conformance/fixtures/: python_rich.json  python_rich_export.md
tests/conformance/python_reference/: generate_fixtures.py
tests/snapshots/: demo_showcase_snapshots__dashboard_scene.snap  demo_showcase_snapshots__hero_scene.snap  demo_showcase_snapshots__scene_list.snap  e2e_table__e2e_table_leading_with_separators.snap  e2e_table__e2e_table_with_leading.snap  golden_test__columns_multiline.snap  golden_test__progress_bar_ascii.snap  golden_test__rule_left_aligned.snap  golden_test__rule_right_aligned.snap  golden_test__table_basic.snap  golden_test__table_empty.snap  golden_test__table_no_header.snap  golden_test__table_single_cell.snap  golden_test__table_wide.snap  golden_test__table_with_title.snap  golden_test__text_wrapped.snap  golden_test__tree_ascii.snap  golden_test__tree_nested.snap  golden_test__tree_simple.snap
